Fix systemd units referencing an obsolete sway.service unit

--- a/config/.config/systemd/user/kanshi.service
+++ b/config/.config/systemd/user/kanshi.service
@@ -2,6 +2,8 @@
 Description=Dynamic output configuration for Wayland compositors
 Documentation=https://sr.ht/~emersion/kanshi
 BindsTo=sway-session.target
+PartOf=sway-session.target
+After=sway-session.target
 
 [Service]
 Type=simple
