--- a/config/.config/systemd/user/nm-applet.service
+++ b/config/.config/systemd/user/nm-applet.service
@@ -2,11 +2,13 @@
 Description=Network Manager applet
 Documentation=man:nm-applet(1)
 BindsTo=sway-session.target
-After=sway.service
+PartOf=sway-session.target
+After=sway-session.target
 
 [Service]
 Type=simple
 Environment=GTK_USE_PORTAL=1
 ExecStart=/usr/bin/nm-applet --indicator
+
 [Install]
 WantedBy=sway-session.target
