--- a/config/.config/systemd/user/blueman-applet.service
+++ b/config/.config/systemd/user/blueman-applet.service
@@ -2,7 +2,8 @@
 [Unit]
 Description=Bluetooth management applet
 BindsTo=sway-session.target
-After=sway.service
+PartOf=sway-session.target
+After=sway-session.target
 
 [Service]
 Type=dbus
