--- a/config/.config/systemd/user/emacs.service
+++ b/config/.config/systemd/user/emacs.service
@@ -8,7 +8,7 @@ Type=forking
 ExecStart=/usr/local/bin/emacs --daemon=apolloemacs
 ExecStop=/usr/local/bin/emacsclient --eval "(progn (setq kill-emacs-hook 'nil) (kill-emacs))"
 Environment=COLORTERM=truecolor
-Environment=SSH_AUTH_SOCK=%t/ssh-agent.socket
+Environment=SSH_AUTH_SOCK=%t/openssh_agent
 Environment=GPG_AGENT_INFO=%t/gnupg/S.gpg-agent
 
 [Install]
