--- a/config/.config/xdg-desktop-portal/portals.conf
+++ b/config/.config/xdg-desktop-portal/portals.conf
@@ -1,5 +1,5 @@
 [preferred]
-default=gtk
+default=wlr
 org.freedesktop.impl.portal.ScreenCast=wlr
 org.freedesktop.impl.portal.Screenshot=wlr
 org.freedesktop.impl.portal.Settings=darkman
