--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -10,6 +10,7 @@
 	autoSetupRemote = true
 [alias]
 	commend = commit --amend --no-edit
+	grog = log --graph --abbrev-commit --decorate --all --format=format:\"%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(dim white) - %an%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n %C(white)%s%C(reset)\"
 [pull]
 	rebase = true
 [rebase]
