--- a/config/.config/systemd/user/emacs.service
+++ b/config/.config/systemd/user/emacs.service
@@ -10,6 +10,7 @@ ExecStop=/usr/local/bin/emacsclient --eval "(progn (setq kill-emacs-hook 'nil) (
 Environment=COLORTERM=truecolor
 Environment=SSH_AUTH_SOCK=%t/openssh_agent
 Environment=GPG_AGENT_INFO=%t/gnupg/S.gpg-agent
+Environment=GDK_BACKEND=wayland
 
 [Install]
 WantedBy=default.target
